# Klarity

./: .gitignore  .klarity.yml.example  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  flow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: dashboard.py  health.py  webhook.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/github/: auth.py  client.py  comments.py
backend/app/jobs/: tasks.py  worker.py
backend/app/klarity_config/: parser.py
backend/app/reputation/: tracker.py
backend/app/scoring/: engine.py  heuristics.py  slop_detector.py
backend/tests/: conftest.py
backend/tests/unit/: test_heuristics.py  test_slop_detector.py
dashboard/: .env.local  .env.local.example  Dockerfile  next.config.ts  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/(dashboard)/: layout.tsx  page.tsx
dashboard/app/(dashboard)/contributors/: page.tsx
dashboard/app/login/: page.tsx
dashboard/components/layout/: Header.tsx  Sidebar.tsx
dashboard/components/queue/: FilterBar.tsx  QueueTable.tsx  StatsBar.tsx
dashboard/components/score/: ScoreBadge.tsx  ScoreBreakdown.tsx
dashboard/lib/: api.ts  auth.ts  utils.ts
dashboard/types/: index.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  SELF_HOSTING.md  TESTING.md
(+3 files in other folders)
