[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klarity"
version = "0.1.0"
description = "AI Triage Assistant for Open Source Maintainers"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "sqlmodel==0.0.22",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "redis==5.2.1",
    "arq==0.26.1",
    "httpx==0.28.1",
    "PyGithub==2.5.0",
    "PyJWT==2.10.1",
    "cryptography==44.0.0",
    "pyyaml==6.0.2",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.35.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "httpx==0.28.1",
    "types-PyYAML==6.0.12.20240917",
    "types-redis==4.6.0.20241004",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.db.base", "app.db.session", "app.jobs.tasks", "app.jobs.worker"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
